[package]
name = "rust-reverse-shell-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrss_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3"
futures-util = "0.3"
self_update = "0.39.0"
auto-launch = "0.5.0"
reqwest = "0.11.24"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
gethostname = "0.4.3"
chrono = "0.4.34"
