[package]
name = "rust-remote-management-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrmt_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
bytes = "1.5.0"
async-recursion = "1.0.5"
