[package]
name = "rust-remote-management-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrmt_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
bytes = "1.6"
uuid = { version = "1.8", features = ["v4"] }
byteorder = "1.5"
chrono = "0.4.38"
